# Rikka

./: README.md  install.ps1  install.sh  pyproject.toml
docs/: backend-v2.0.md  backend-v3.md
src/ibuki/: __init__.py  __main__.py
src/ibuki/backend/: backend.py  backend_v3.py  mpv_control.py  settings_control.py  utils_v3.py  watch_history.py
src/ibuki/css/: search_styles.css
src/ibuki/logs/: logger.py
src/ibuki/screens/: anime_detail.py  continue_watching.py  episode_view.py  home.py  search.py  settings.py
src/rikka/: __init__.py  __main__.py
src/rikka/backend/: backend.py  mpv_control.py  settings_control.py  watch_history.py
src/rikka/css/: continue_watching_styles.css  details_styles.css  episode_styles.css  home_styles.css  search_styles.css  settings_styles.css
src/rikka/screens/: anime_detail.py  continue_watching.py  episode_view.py  home.py  search.py  settings.py
src/rikka/utils/: general.py  logger.py
tests/: test_backend.py
